# comfy-ui-gemini-prompt-generator

./: .gitignore  LICENSE  README.md  gemini.py  nodes.py  pyproject.toml
.github/workflows/: publish.yml
js/: gemini_prompt_builder.js
